--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
 
   <hr noshade>
   <h2>My Personal collection of <a href="https://www.instagram.com/livenaturally.ecoaware/">natural solutions</a></h2>
-  <li>Skin care 😍 </li>
-  <li>Hair care 🥰  </li>
+  <li>Skin care</li>
+  <li>Hair care  </li>
   <li>Ebooks</li>
   <h3>Home Remedies</h3>
-  <ul>😎
+  <ul>
     <li>Hair</li>
     <li>Skin</li>
     <li>Gut health</li>
